Fix margin right gap on last subject guide tab.

--- a/src/scss/components/_subject-guide.scss
+++ b/src/scss/components/_subject-guide.scss
@@ -350,6 +350,10 @@
     display: flex;
     justify-content: space-between;
 
+    &:last-child {
+      margin-right: 0;
+    }
+
     .ui.label {
       color: $smokey;
     }
